[package]
name = "reesolve"
version = "0.0.2"
authors = ["Junn <likesgophers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
bench = false
path = "src/bin/main.rs"
name = "ree"

[profile.release]
opt-level = 3
debug = false

[dependencies]
trust-dns-resolver = "0.20.0-alpha.2"
trust-dns-proto = "0.20.0-alpha.2"
tokio = { version = "0.2.22", features = ["fs","sync", "rt-threaded", "macros"]}
serde = { version = "1.0.115", features = ["derive", "rc"] }
serde_json = "1.0.57"
futures = "0.3.5"
csv = "1.1"
clap = "2.33.1"
tracing = {version = "0.1.19", features = ["attributes"]}
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.12"
